@@ -47,6 +47,8 @@ elif [ X"${DISTRO}" == X'DEBIAN' -o X"${DISTRO}" == X'UBUNTU' ]; then
 
     # Ubuntu-14.04
     [ X"${DISTRO_CODENAME}" == X'trusty' ] && export PGSQL_VERSION='9.3'
+    # Ubuntu 16.04
+    [ X"${DISTRO_CODENAME}" == X'xenial' ] && export PGSQL_VERSION='9.5'
 
     export PGSQL_DATA_DIR="/var/lib/postgresql/${PGSQL_VERSION}/main"
     export PGSQL_CONF_DIR="/etc/postgresql/${PGSQL_VERSION}/main"
