@@ -302,6 +302,14 @@ protocol pop3 {
 # Login processes. Refer to Dovecot wiki for more details:
 # http://wiki2.dovecot.org/LoginProcess
 service imap-login {
+    #inet_listener imap {
+    #    port = 143
+    #}
+    #inet_listener imaps {
+    #    port = 993
+    #    ssl = yes
+    #}
+
     service_count = 1
 
     # To avoid startup latency for new client connections, set process_min_avail
@@ -317,6 +325,14 @@ service imap-login {
 }
 
 service pop3-login {
+    #inet_listener pop3 {
+    #    port = 110
+    #}
+    #inet_listener pop3s {
+    #    port = 995
+    #    ssl = yes
+    #}
+
     service_count = 1
 
     # number of simultaneous POP3 connections
