@@ -193,8 +193,10 @@
             viewURL = "PH_SOGO_DB_TYPE://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER_ADDRESS:PH_SQL_SERVER_PORT/PH_SOGO_DB_NAME/PH_SOGO_DB_AUTH_VIEW";
             canAuthenticate = YES;
 
-            // Default algorithm used when changing passwords.
-            userPasswordAlgorithm = ssha;
+            // The algorithm used for password encryption when changing
+            // passwords without Password Policies enabled.
+            // Possible values are: plain, crypt, md5-crypt, ssha, ssha512.
+            userPasswordAlgorithm = ssha512;
             prependPasswordScheme = YES;
 
             // Use `vmail.mailbox` as per-domain address book.
@@ -230,8 +232,8 @@
 
             // The algorithm used for password encryption when changing
             // passwords without Password Policies enabled.
-            // Possible values are: plain, crypt, md5-crypt, ssha.
-            userPasswordAlgorithm = ssha;
+            // Possible values are: plain, crypt, md5-crypt, ssha, ssha512.
+            userPasswordAlgorithm = ssha512;
 
             IDFieldName = mail;
             bindFields = (mail);
